Changes between 1.0.2 and '1.1.0b1'
=====================================

* generalized skipping: a new way to mark python functions with skipif or xfail 
  at function, class and modules level based on platform or sys-module attributes. 

* extend py.test.mark decorator to allow for positional args

* introduce and test "py.cleanup -d" to remove empty directories 

* fix issue #59 - robustify unittest test collection

* make bpython/help interaction work by adding an __all__ attribute 
  to ApiModule, cleanup initpkg

* use MIT license for pylib, add some contributors

* remove py.execnet code and substitute all usages with 'execnet' proper

* fix issue50 - cached_setup now caches more to expectations 
  for test functions with multiple arguments. 

* merge Jarko's fixes, issue #45 and #46

* add the ability to specify a path for py.lookup to search in

* fix a funcarg cached_setup bug probably only occuring 
  in distributed testing and "module" scope with teardown. 

* consolidate builtins implementation to be compatible with >=2.3, 
  add helpers to ease keeping 2 and 3k compatible code

* deprecate py.compat.doctest|subprocess|textwrap|optparse

* deprecate py.magic.autopath, remove py/magic directory 

* move pytest assertion handling to py/code and a pytest_assertion
  plugin, add "--no-assert" option, deprecate py.magic namespaces 
  in favour of (less) py.code ones. 

* consolidate and cleanup py/code classes and files 

* cleanup py/misc, move tests to bin-for-dist 

* introduce delattr/delitem/delenv methods to py.test's monkeypatch funcarg 

* consolidate py.log implementation, remove old approach. 

* introduce py.io.TextIO and py.io.BytesIO for distinguishing between
  text/unicode and byte-streams (uses underlying standard lib io.* 
  if available) 

* make py.unittest_convert helper script available which converts "unittest.py" 
  style files into the simpler assert/direct-test-classes py.test/nosetests